--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -4,8 +4,14 @@ html {
   scroll-behavior: smooth;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
+  text-decoration: none;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -20,6 +26,6 @@ body {
 }
 
 img {
-  max-width: 100%;
+  // max-width: 100%;
   height: auto;
 }
